style: apply OpenRewrite pre-commit auto-fixes to plan-authored WS/gRPC sources
Mechanical normalization (EnumSet.of for enum sets, List.getFirst(), import
de-qualification, continuation-indent) produced by the verify -Ppre-commit
recipe run over files authored by this plan; verified green in the same run.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>